--- a/src/components/view/view.less
+++ b/src/components/view/view.less
@@ -18,13 +18,13 @@ html {
 .app-view {
     .translate3d(0,0,0);
     -webkit-perspective: 1000;
-    position: relative;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     background-color: @body-bg;
     height: 100%;
+    overflow: hidden;
 }
 
 
